# Icarus

./: .gitignore  CMakeLists.txt  README.md
include/: constants.h  flight_controller.h  imu.h  motor_controller.h
src/: flight_controller.cpp  imu.cpp  main.cpp  motor_controller.cpp
